--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -13,9 +13,9 @@
       {% csrf_token %}
     </form>
     <table id="id_list_table">
-      <tr>
-        <td>1: {{ new_tem_text }}</td>
-      </tr>
-    </table>
+        {% for item in items %}
+        <tr><td>1: {{ item.text }}</td></tr>
+        {% endfor %}
+        </table>
   </body>
 </html>
