--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -13,9 +13,11 @@
       {% csrf_token %}
     </form>
     <table id="id_list_table">
-        {% for item in items %}
-        <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-        {% endfor %}
-        </table>
+      {% for item in items %}
+      <tr>
+        <td>{{ forloop.counter }}: {{ item.text }}</td>
+      </tr>
+      {% endfor %}
+    </table>
   </body>
 </html>
