--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Your To-Do list</h1>
-    <form method="POST" action="/"> 
+    <form method="POST" ction="/lists/new"> 
       <input
         id="id_new_item"
         name="item_text"
