--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Your To-Do list</h1>
-    <form method="POST" ction="/lists/new"> 
+    <form method="POST" action="/lists/{{ list.id }}/add_item"> 
       <input
         id="id_new_item"
         name="item_text"
@@ -13,7 +13,7 @@
       {% csrf_token %}
     </form>
     <table id="id_list_table">
-      {% for item in items %}
+      {% for item in list.item_set.all %}
       <tr>
         <td>{{ forloop.counter }}: {{ item.text }}</td>
       </tr>
