--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -4,7 +4,7 @@
 Your To-Do list
 {% endblock %}
 
-{% block form_action %}/lists/{{ list.id }}/add_item{% endblock %} 
+{% block form_action %}/lists/{{ list.id }}/{% endblock %} 
 {% block table %}
 <table id="id_list_table" class="table">
   {% for item in list.item_set.all %}
