--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -15,13 +15,9 @@
         <div class="col-md-6 col-md-offset-3 jumbotron">
           <div class="text-center">
             <h1>{% block header_text %}{% endblock %}</h1>
+
             <form method="POST" action="{% block form_action %}{% endblock %}">
-              <input
-                name="item_text"
-                id="id_new_item"
-                placeholder="Enter a to-do item"
-                class="form-control input-lg"
-              />
+              {{ form.text }}
               {% csrf_token %}
               {% if error %}
               <div class="form-group has-error">
@@ -29,6 +25,7 @@
               </div>
               {% endif %}
             </form>
+
           </div>
         </div>
       </div>
