--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -10,17 +10,16 @@
   </head>
   <body>
     <div class="container">
-      <div class="navbar">
-        {% if user.is_authenticated %}
-        <p>Logged in as {{ user.email}}</p>
-        <p><a id="id_logout" href="{% url 'logout' %}">Log out</a></p>
-        {% else %}
-        <form method="POST" action="{% url 'send_login_email' %}">
-          Enter email to log in: <input name="email" type="text" />
-          {% csrf_token %}
-        </form>
-        {% endif %}
-      </div>
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Superlists</a>
+          <form class="navbar-form navbar-right" method="POST" action="#">
+            <span>Enter email to log in:</span>
+            <input class="form-control" name="email" type="text" />
+            {% csrf_token %}
+          </form>
+        </div>
+      </nav>
 
       <div class="row">
         <div class="col-md-6 col-md-offset-3 jumbotron">
