--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -9,15 +9,18 @@
     <link href="/static/base.css" rel="stylesheet" />
   </head>
   <body>
+
     <div class="container">
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
-          <form class="navbar-form navbar-right" method="POST" action="#">
+
+          <form class="navbar-form navbar-right" method="POST" action="{% url 'send_login_email' %}">
             <span>Enter email to log in:</span>
             <input class="form-control" name="email" type="text" />
             {% csrf_token %}
           </form>
+
         </div>
       </nav>
 
