--- a/lists/templates/my_lists.html
+++ b/lists/templates/my_lists.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block header_text %}My Lists{% endblock %} {% blocklist_form %}{% endblock %} 
+{% block header_text %}My Lists{% endblock %}
+{% block list_form %}{% endblock %} 
 {% block extra_content %}
 <h2>{{ owner.email }}'s lists</h2>
 <ul>
